--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,8 @@
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
             <h1 class="display-5">Login</h1>
+            <!--ALERT-->
+            <div id="mainAlert" th:if="${alertText}" th:text="${alertText}" th:class="'alert ' + ${alertColor}" role="alert" />
             <form action="#" th:action="@{/login}" method="POST">
                 <div th:if="${param.error}" class="alert alert-danger">
                     Invalid username or password
